jellyfin/jellyplex-watched.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyplex-watched
  namespace: jellyfin
  labels:
    app: jellyplex-watched
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: jellyplex-watched
  template:
    metadata:
      labels:
        app: jellyplex-watched
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      containers:
        - name: jellyplex-watched
          image: luigi311/jellyplex-watched:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: tmp
          emptyDir: {}
