jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
    - name: http
      protocol: TCP
      port: 30013
      targetPort: 30013
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    kubernetes.io/service-name: jellyfin
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30013
endpoints:
  - addresses:
      - 10.0.10.32
