jellyfin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    external-dns.kubernetes.io/target: lfp.it.paulus.family
spec:
  tls:
    - hosts:
        - jellyfin.it.paulus.family
  rules:
    - host: jellyfin.it.paulus.family
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 30013
            path: /
            pathType: Prefix
